--- a/app/assets/stylesheets/ci_api/chat-ui-popup.scss
+++ b/app/assets/stylesheets/ci_api/chat-ui-popup.scss
@@ -229,6 +229,7 @@ $page-height: calc(100% - 5px);
     overflow-x: hidden;
     padding-right: 14px;
     padding-left: 1em;
+    position: relative;
 
     div {
         margin-bottom: 0px;
@@ -245,13 +246,19 @@ $page-height: calc(100% - 5px);
         vertical-align: bottom;
         padding: 0 0.5em .2em 0;
     }
-    .skipToTop{
+     .skipToTopWithScroll{
         position:relative;
-        top: calc(100% - #{$transcript-sub-height});
-        white-space: nowrap;
+        bottom : 0;
         margin-left:5px;
         margin-right:5px;
      }
+     .skipToTopWithOutScroll{
+      position:absolute;
+      bottom : 0;
+      margin-left:5px;
+      margin-right:5px;
+      width:90%;
+   }
      #skipToBottom {
         margin-left:5px;
         margin-right:5px;
